--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
+    "moment": "^2.24.0",
     "mongoose": "^4.9.6",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
