--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "mongoose": "^5.8.10",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
