--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.0",
     "cors": "^2.8.5",
     "express": "^4.15.0",
+    "faker": "^4.1.0",
     "jquery": "^3.1.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
