--- a/Q&A module/package.json
+++ b/Q&A module/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server/index.js",
-    "build": "webpack -w"
+    "build": "webpack -w",
+    "seed": "node database/seed.js"
   },
   "author": "Christine",
   "license": "ISC",
