--- a/Q&A module/package.json
+++ b/Q&A module/package.json
@@ -12,16 +12,23 @@
   "author": "Christine",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "eslint-config-hackreactor": "github:reactorcore/eslint-config-hackreactor",
+    "grunt": "~0.4.5",
+    "grunt-run": "^0.8.1",
+    "grunt-webpack": "^3.1.3",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "axios": "^0.19.1",
     "body-parser": "^1.17.0",
     "cors": "^2.8.5",
+    "eslint": "^6.8.0",
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "grunt": "^1.0.4",
@@ -34,6 +41,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
+    "prettier": "^1.19.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-select": "^3.0.8",
