--- a/product rec module/package.json
+++ b/product rec module/package.json
@@ -16,7 +16,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "eslint-config-hackreactor": "github:reactorcore/eslint-config-hackreactor"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -35,6 +36,7 @@
     "react-dom": "^15.4.2",
     "react-select": "^3.0.8",
     "request": "^2.81.0",
-    "underscore": "^1.9.2"
+    "underscore": "^1.9.2",
+    "eslint": "^6.8.0"
   }
 }
