--- a/product rec module/package.json
+++ b/product rec module/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.17.0",
     "cors": "^2.8.5",
+    "eslint": "^6.8.0",
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "jquery": "^3.1.1",
@@ -36,7 +37,6 @@
     "react-dom": "^15.4.2",
     "react-select": "^3.0.8",
     "request": "^2.81.0",
-    "underscore": "^1.9.2",
-    "eslint": "^6.8.0"
+    "underscore": "^1.9.2"
   }
 }
